# dldt-c_api

./: CMakeLists.txt  README.md  build.sh  ie_api_impl.cpp  ie_api_impl.hpp  ie_c_api.cpp
include/: ie_c_api.h
library_config/: dldt_c_api.pc.in
src/: CMakeLists.txt  ie_c_api.cpp
test/: CMakeLists.txt  main.cpp  test.h
test/hello_nv12_input_classification/: CMakeLists.txt  classification_results.h  main.cpp
test/object_detect_sample/: CMakeLists.txt  main.cpp  test.h
